[package]
name = "lambda-shield"
version = "0.1.0"
edition = "2021"
authors = ["Lambda Quantum"]
description = "A lightweight, energy-efficient stream cipher based on the Collatz Lemma 3 residue discovery."
license = "MIT"
repository = "https://github.com/0x-auth/lambda-shield"
homepage = "https://github.com/0x-auth/lambda-shield"
readme = "README.md"
keywords = ["cryptography", "collatz", "cipher", "iot", "lightweight"]
categories = ["cryptography", "embedded-software"]

[dependencies]
# No external dependencies - keeping it lightweight for IoT.
